Style and template formatting

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -3,7 +3,7 @@ $body-bg: #4382a5;
 $primary: #155f59;
 $secondary: #e90e66;
 $danger: #dd0000;
-$success: lime;
+// $success: lime;
 $warning: orange;
 $info: aqua;
 
